--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </header>
 <div class="container">
 <h2>Nueva Cotización</h2>
-<form id="cotizacionForm"><input id="nombreEmpresa" placeholder="Nombre"/><br/><input id="empresa" placeholder="Empresa"/><br/><input id="obra" placeholder="Obra"/><br/><input id="direccion" placeholder="Dirección"/><br/><input id="presupuesto" placeholder="Presupuesto"/><br/><input id="version" placeholder="Versión" readonly="readonly"/><br/><input id="fechaCotizacion" placeholder="Fecha de Cotización" readonly="readonly"/><br/><input id="folio" placeholder="Folio"/><br/><input id="supervisor" placeholder="Supervisor"/><br/></form>
+<form id="cotizacionForm"><div><input id="nombreEmpresa" placeholder="Nombre" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="empresa" placeholder="Empresa" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="obra" placeholder="Obra" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="direccion" placeholder="Dirección" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="presupuesto" placeholder="Presupuesto" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="version" placeholder="Versión" readonly="readonly" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="fechaCotizacion" placeholder="Fecha de Cotización" readonly="readonly" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="folio" placeholder="Folio" style="width: auto; display: block; margin-bottom: 8px;"/></div><div><input id="supervisor" placeholder="Supervisor" style="width: auto; display: block; margin-bottom: 8px;"/></div></form>
 <div>
 <button id="agregarProducto">+ Añadir Ítem</button>
 <button id="agregarSimilar">+ Añadir Similar</button>
@@ -98,5 +98,21 @@
     });
     </script>
 </div>
-</body>
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  const fechaInput = document.getElementById("fechaCotizacion");
+  const versionInput = document.getElementById("version");
+
+  if (fechaInput) {
+    const hoy = new Date();
+    fechaInput.value = hoy.toLocaleDateString();
+  }
+
+  if (versionInput) {
+    const usuario = localStorage.getItem("usuario") || "default";
+    const historial = JSON.parse(localStorage.getItem(`cotizaciones_${usuario}`) || "[]");
+    versionInput.value = historial.length + 1;
+  }
+});
+</script></body>
 </html>
