--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 </header>
 <div class="container">
 <h2>Nueva Cotización</h2>
+
 <form id="cotizacionForm">
   <div><strong>Empresa:</strong> <span id="nombreUsuario"></span></div>
   <div><label>Obra<br><input id="obra" placeholder="Obra" /></label></div>
@@ -71,6 +72,7 @@
   <div><label>Folio<br><input id="folio" placeholder="Folio" /></label></div>
   <div><label>Supervisor<br><input id="supervisor" placeholder="Supervisor" /></label></div>
 </form>
+
 <div>
 <button id="agregarProducto">+ Añadir Ítem</button>
 <button id="agregarSimilar">+ Añadir Similar</button>
@@ -123,7 +125,7 @@ document.addEventListener("DOMContentLoaded", () => {
     versionInput.value = historial.length + 1;
   }
 });
-</script></body>
+</script>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   document.getElementById("nombreUsuario").innerText = localStorage.getItem("usuario") || "Desconocido";
@@ -137,5 +139,6 @@ document.addEventListener("DOMContentLoaded", () => {
   if (versionInput) versionInput.value = historial.length + 1;
 });
 </script>
+</body>
 
 </html>
