--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ document.addEventListener("DOMContentLoaded", () => {
   if (versionInput) versionInput.value = historial.length + 1;
 });
 </script>
+<script src="historial.js"></script>
 </body>
 
 </html>
